fix icon whitespace for data objects

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -3,7 +3,7 @@
 @import "tailwindcss";
 
 @plugin "@iconify/tailwind4" {
- prefixes: bi, ri, mdi, fluent, fluent-color, bpmn, material-symbols, flat-color-icons, tabler, solar, streamline-flex;
+ prefixes: bi, ri, mdi, uil, fluent, fluent-color, bpmn, material-symbols, flat-color-icons, tabler, solar, streamline-flex;
 }
 
 svg text.bi {
